--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 blinker==1.8.2
+cachelib==0.13.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
+Flask-Session==0.8.0
 gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+msgspec==0.18.6
 packaging==24.1
 python-dotenv==1.0.1
 python-http-client==3.3.7
+redis==5.0.7
 requests==2.32.3
 sendgrid==6.11.0
 starkbank-ecdsa==2.2.0
